test/invalid/idl/async-sequence-two-params.webidl
[Exposed=Window]
interface AsyncSequence {
  async_sequence<long, short> foo();
};
